docs/0.14/_sources/api/gammapy.modeling.models.ConstantSpectralModel.rst.txt
ConstantSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpectralModel.const
      ~ConstantSpectralModel.parameters
      ~ConstantSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpectralModel.__call__
      ~ConstantSpectralModel.copy
      ~ConstantSpectralModel.create
      ~ConstantSpectralModel.energy_flux
      ~ConstantSpectralModel.energy_flux_error
      ~ConstantSpectralModel.evaluate
      ~ConstantSpectralModel.evaluate_error
      ~ConstantSpectralModel.from_dict
      ~ConstantSpectralModel.integral
      ~ConstantSpectralModel.integral_error
      ~ConstantSpectralModel.inverse
      ~ConstantSpectralModel.plot
      ~ConstantSpectralModel.plot_error
      ~ConstantSpectralModel.spectral_index
      ~ConstantSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: const
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
