docs/0.17/_sources/api/gammapy.modeling.models.ConstantSpectralModel.rst.txt
ConstantSpectralModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantSpectralModel.const
      ~ConstantSpectralModel.covariance
      ~ConstantSpectralModel.default_parameters
      ~ConstantSpectralModel.parameters
      ~ConstantSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantSpectralModel.__call__
      ~ConstantSpectralModel.copy
      ~ConstantSpectralModel.create
      ~ConstantSpectralModel.energy_flux
      ~ConstantSpectralModel.evaluate
      ~ConstantSpectralModel.evaluate_error
      ~ConstantSpectralModel.from_dict
      ~ConstantSpectralModel.from_parameters
      ~ConstantSpectralModel.integral
      ~ConstantSpectralModel.inverse
      ~ConstantSpectralModel.plot
      ~ConstantSpectralModel.plot_error
      ~ConstantSpectralModel.spectral_index
      ~ConstantSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: const
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
